# jarvis

./: .env.aec  .envrc  .gitignore  =12.3  CANARY_FIXES.md  CHANGELOG.md  CLEANUP_FASTCONFORMER.md  DEPLOYMENT.md  Dockerfile.nemo  FILTER_FIX.md  HOTKEY_SETUP.md  IMPLEMENTATION_TESTED.md  IMPROVEMENTS_APPLIED.txt  JARVIS_RECOGNITION_IMPROVEMENTS.md  MIGRATION.md  PRODUCTION_CHECKLIST.md  README.md  SETUP.md  STREAMING_IMPLEMENTATION_COMPLETE.md  VAD_FIX.md  VISION.md  WORD_BOOSTING_GUIDE.md  bubble.sh  conversation_improver.py  cuda_compat.py  deps.edn  docker-compose.yml  hear.py  install.sh  iris.sh  jarvis.py  jarvis.sh  keyboard_listener.py  listen.sh  nemo_server.py  pyproject.toml  requirements.txt  run.sh  speak.sh  tasks.md  (+6 more)
.portal/: vs-code.edn
ai-detector/: ai_detector.py  config.yaml  log_watcher.py  requirements.txt  start.sh
archive/: ACCURACY_FIX.md  AEC_INVESTIGATION.md  AEC_SOLUTIONS.md  ASR_ACCURACY_IMPROVEMENTS.md  CONVERSATIONAL_AI_SETUP.md  ECHO_CANCELLATION_SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTILINGUAL_SETUP.md  SETUP_COMPLETE.md  SPEAK_TEST.md  STABILIZATION_COMPLETE.md  SUMMARY_ALL_FIXES.md  TEXT_SELECTION_GUIDE.md  enroll_voice.py  install_pytorch_gpu.sh  jarvis-voice.sh  jarvis.sh  test-asr.sh  test_audio_capture.py  test_buffering.py  test_canary_model.py  test_config_simple.py  test_imports.py  test_keyboard_hotkey.py  test_real_transcription.py  test_streaming_model.py
config/: jarvis.service  keyd.conf
core/: __init__.py  audio.py  buffer.py  config.py
deploy/: install.sh  jarvis.service
docs/: CLAUDE_CODE_INTEGRATION.md  (+1 more)
(+238 files in other folders)
