[project]
name = "iris"
version = "0.1.0"
description = "Push-to-talk voice assistant for Wayland with STT and TTS"
requires-python = ">=3.10"
dependencies = [
    "nemo_toolkit[asr]",
    "sounddevice",
    "numpy",
    "evdev",
    "flask",
    "librosa",
    "requests",
]

[project.scripts]
iris = "iris.server:main"

[tool.setuptools.packages.find]
include = ["iris*"]
